--- a/src/main/resources/themes/default/game_status_tooltip.fxml
+++ b/src/main/resources/themes/default/game_status_tooltip.fxml
@@ -5,8 +5,8 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<VBox fx:id="gameStatusTooltipRoot" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-      minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="gameStatusTooltipRoot" alignment="CENTER" maxHeight="-Infinity"
+      maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.40"
       fx:controller="com.faforever.client.chat.GameStatusTooltipController">
   <children>
     <HBox prefHeight="100.0" prefWidth="200.0">
@@ -14,16 +14,23 @@
         <ImageView fx:id="mapPreview" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true"/>
         <VBox>
           <children>
+            <Label fx:id="gameTitleLabel" layoutX="10.0" layoutY="10.0" minWidth="200.0"
+                   styleClass="game-status-tooltip-gametitle,h1" text="&lt;Title&gt;" wrapText="true"/>
             <Label fx:id="mapNameLabel" minWidth="200.0" styleClass="game-status-tooltip-mapname"
                    text="&lt;Map Name&gt;">
               <VBox.margin>
                 <Insets/>
               </VBox.margin>
+              <graphic>
+                <Label styleClass="fontawesome" text=""/>
+              </graphic>
             </Label>
-            <Label fx:id="gameTitleLabel" layoutX="10.0" layoutY="10.0" minWidth="200.0"
-                   styleClass="game-status-tooltip-gametitle" text="&lt;Game Title&gt;" wrapText="true"/>
             <Label fx:id="featuredModLabel" layoutX="10.0" layoutY="27.0" minWidth="200.0"
-                   styleClass="game-status-tooltip-featuredmod" text="&lt;Featured Mod&gt;" wrapText="true"/>
+                   styleClass="game-status-tooltip-featuredmod" text="&lt;Mod&gt;" wrapText="true">
+              <graphic>
+                <Label styleClass="fontawesome" text=""/>
+              </graphic>
+            </Label>
           </children>
         </VBox>
       </children>
