--- a/src/main/resources/themes/default/games.fxml
+++ b/src/main/resources/themes/default/games.fxml
@@ -47,7 +47,12 @@
           <content>
             <VBox maxHeight="1.7976931348623157E308" maxWidth="300.0" minHeight="0.0" minWidth="0.0">
               <children>
-                <ImageView fx:id="mapImageView" fitWidth="256.0" onMouseClicked="#onMapLargePreview" pickOnBounds="true" preserveRatio="true" styleClass="map-preview" />
+                <ImageView fx:id="mapImageView" fitWidth="256.0" onMouseClicked="#onMapLargePreview" pickOnBounds="true"
+                           preserveRatio="true" styleClass="map-preview">
+                  <VBox.margin>
+                    <Insets bottom="20.0"/>
+                  </VBox.margin>
+                </ImageView>
                 <Label fx:id="gameTitleLabel" alignment="CENTER" styleClass="game-detail-title"
                        text="&lt;Game title&gt;" wrapText="true"/>
                 <Label fx:id="gameTypeLabel" text="&lt;Game type&gt;">
