--- a/src/main/resources/theme/map_tile.fxml
+++ b/src/main/resources/theme/map_tile.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="modTileRoot" onMouseClicked="#onShowModDetail" prefWidth="200.0"
+<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="mapTileRoot" onMouseClicked="#onShowMapDetail" prefWidth="200.0"
           styleClass="tile,pointable" xmlns="http://javafx.com/javafx/8.0.40"
-          fx:controller="com.faforever.client.mod.ModTileController">
+          fx:controller="com.faforever.client.map.MapTileController">
   <columnConstraints>
     <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
     <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
@@ -20,18 +20,16 @@
     <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
   </rowConstraints>
   <children>
-    <ImageView fx:id="thumbnailImageView" fitHeight="128.0" fitWidth="128.0" onMouseClicked="#onShowModDetail"
+    <ImageView fx:id="thumbnailImageView" fitHeight="128.0" fitWidth="128.0"
                pickOnBounds="true" preserveRatio="true" GridPane.columnSpan="2" GridPane.halignment="CENTER"/>
-    <Label fx:id="nameLabel" onMouseClicked="#onShowModDetail" text="Label" GridPane.columnSpan="2147483647"
+    <Label fx:id="nameLabel" text="Label" GridPane.columnSpan="2147483647"
            GridPane.rowIndex="1"/>
-    <Label fx:id="authorLabel" styleClass="secondary" text="Label" GridPane.columnSpan="2147483647"
-           GridPane.rowIndex="2"/>
-    <Label fx:id="commentsLabel" text="1" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+    <Label fx:id="downloadsLabel" text="1" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
       <graphic>
         <Label styleClass="fontawesome" text=""/>
       </graphic>
     </Label>
-    <Label fx:id="likesLabel" text="1" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+    <Label fx:id="playsLabel" text="1" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
       <graphic>
         <Label styleClass="fontawesome" text=""/>
       </graphic>
