--- a/src/main/resources/theme/mod_vault.fxml
+++ b/src/main/resources/theme/mod_vault.fxml
@@ -41,7 +41,8 @@
                               <Insets bottom="20.0" top="20.0"/>
                            </VBox.margin>
                         </HBox>
-                        <Button mnemonicParsing="false" onAction="#onUploadModButtonClicked" text="%modVault.upload"/>
+                        <Button mnemonicParsing="false" onAction="#onUploadModButtonClicked" text="%modVault.upload"
+                                disable="true"/>
                         <VBox fx:id="showroomGroup" spacing="5.0">
                            <children>
                               <Label styleClass="h2" text="%modVault.recommendedUidMods">
@@ -70,7 +71,7 @@
                                     <Insets top="20.0"/>
                                  </VBox.margin>
                               </Label>
-                              <FlowPane fx:id="mostLikedMods" hgap="10.0" maxWidth="1.7976931348623157E308"
+                              <FlowPane fx:id="mostLikedModsPane" hgap="10.0" maxWidth="1.7976931348623157E308"
                                         prefWrapLength="1500.0" vgap="10.0"/>
                            </children>
                         </VBox>
