--- a/src/main/resources/theme/style-webview.css
+++ b/src/main/resources/theme/style-webview.css
@@ -5,8 +5,7 @@ All the following applies to the content of a WebViews (chat, news), therefore i
 *****************/
 
 html, body {
-  /* TODO JDK-8116513 WebView does not yet allow transparency. As a workaround, we use a black background together with WebView set to blend mode ADD. */
-  background-color: black;
+  background-color: transparent;
   margin: 0, 0, 0, 5px;
   padding: 0;
   /* Use same as -fx-light-text-color */
