--- a/src/main/resources/theme/chat.fxml
+++ b/src/main/resources/theme/chat.fxml
@@ -37,7 +37,7 @@
                 <Insets top="10.0"/>
               </padding>
             </Label>
-            <TextField fx:id="channelNameTextField" onAction="#onJoinChannel" promptText="%chat.channelNamePrompt"/>
+            <TextField fx:id="channelNameTextField" onAction="#onJoinChannelButtonClicked" promptText="%chat.channelNamePrompt"/>
           </children>
         </VBox>
       </children>
