--- a/src/main/resources/theme/chat_user_item.fxml
+++ b/src/main/resources/theme/chat_user_item.fxml
@@ -3,9 +3,11 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
-<fx:root xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308"
-         minWidth="-Infinity" onContextMenuRequested="#onContextMenuRequested" spacing="5.0"
-         styleClass="chat-user-control-root" type="HBox" xmlns="http://javafx.com/javafx/8.0.40">
+<HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="chatUserItemRoot" alignment="CENTER_LEFT"
+      maxWidth="1.7976931348623157E308"
+      fx:controller="com.faforever.client.chat.ChatUserItemController"
+      minWidth="-Infinity" onContextMenuRequested="#onContextMenuRequested" spacing="5.0"
+      styleClass="chat-user-control-root" xmlns="http://javafx.com/javafx/8.0.40">
   <ImageView fx:id="avatarImageView" fitHeight="20.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="chat-user-control-avatar" HBox.hgrow="NEVER" />
   <ImageView fx:id="countryImageView" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true"
              styleClass="chat-user-control-country" HBox.hgrow="NEVER"/>
@@ -15,4 +17,4 @@
   <ImageView fx:id="statusImageView" fitHeight="16.0" fitWidth="16.0" onMouseClicked="#onMouseClickGameStatus"
              onMouseEntered="#onMouseEnterGameStatus" pickOnBounds="true" preserveRatio="true"
              styleClass="chat-user-control-status" HBox.hgrow="NEVER"/>
-</fx:root>
+</HBox>
