--- a/src/main/resources/theme/mod_vault.fxml
+++ b/src/main/resources/theme/mod_vault.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -42,6 +41,7 @@
                               <Insets bottom="20.0" top="20.0"/>
                            </VBox.margin>
                         </HBox>
+                        <Button mnemonicParsing="false" onAction="#onUploadModButtonClicked" text="%modVault.upload"/>
                         <VBox fx:id="showroomGroup" spacing="5.0">
                            <children>
                               <Label styleClass="h2" text="%modVault.recommendedUidMods">
