--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -577,28 +577,28 @@
   -fx-shape: "M0 1 L1 1 L.5 0 Z";
 }
 
-.port-check-status:public {
-  -fx-text-fill: -fx-accent;
+.port-check-status:public .text {
+  -fx-fill: -fx-accent;
 }
 
-.port-check-status:stun {
-  -fx-text-fill: #e2932c;
+.port-check-status:stun .text {
+  -fx-fill: #e2932c;
 }
 
-.port-check-status:blocked {
-  -fx-text-fill: #cb3d3d;
+.port-check-status:blocked .text {
+  -fx-fill: #cb3d3d;
 }
 
-.port-check-status:unknown {
-  -fx-text-fill: #e2932c;
+.port-check-status:unknown .text {
+  -fx-fill: #e2932c;
 }
 
-.connection-status:connected {
-  -fx-text-fill: -fx-accent;
+.connection-status:connected .text {
+  -fx-fill: -fx-accent;
 }
 
-.connection-status:disconnected {
-  -fx-text-fill: #cb3d3d;
+.connection-status:disconnected .text {
+  -fx-fill: #cb3d3d;
 }
 
 /***************** 1v1 match buttons *****************/
