Issue #179 Introduce JoinGameHelper and extract funtionality from GamesController Refactor enter password dialog Dissolve dependencies on GamesController by introducing listeners

--- a/src/main/resources/theme/enter_password.fxml
+++ b/src/main/resources/theme/enter_password.fxml
@@ -1,15 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="enterPasswordRoot" styleClass="popup"
-      xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.faforever.client.game.EnterPasswordController">
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="enterPasswordRoot" styleClass="immediate-notification"
+      xmlns="http://javafx.com/javafx/8.0.60" fx:controller="com.faforever.client.game.EnterPasswordController">
   <children>
-    <PasswordField fx:id="passwordTextField" prefWidth="300.0" promptText="%game.join.passwordPrompt"
-                   onAction="#onPasswordEntered"/>
+    <Label fx:id="titleLabel" styleClass="header" text="%game.join.passwordPrompt"/>
+    <Separator/>
+    <VBox spacing="20.0" styleClass="content">
+      <children>
+        <Label fx:id="loginErrorLabel" focusTraversable="false" maxHeight="1.7976931348623157E308"
+               maxWidth="1.7976931348623157E308" prefHeight="22.0" prefWidth="225.0" text="%game.join.passwordWrong"
+               wrapText="true">
+          <graphic>
+            <Label styleClass="fontawesome,notification-icon,warn" text=""/>
+          </graphic>
+        </Label>
+        <PasswordField fx:id="passwordField"/>
+      </children>
+    </VBox>
+    <ButtonBar fx:id="buttonBar">
+      <buttons>
+        <Button fx:id="joinButton" defaultButton="true" mnemonicParsing="false" onAction="#onJoinButtonClicked"
+                text="%game.join"/>
+        <Button fx:id="cancelButton" cancelButton="true" mnemonicParsing="false" onAction="#onCancelButtonClicked"
+                text="%game.cancel"/>
+      </buttons>
+    </ButtonBar>
   </children>
-  <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-  </padding>
 </VBox>
