--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -803,34 +803,34 @@
 
 /***************** Chat User Control *****************/
 
-.channel-tab-friends-title .chat-user-control-clan.friend,
-.channel-tab-friends-title .chat-user-control-username {
-  -fx-text-fill: #16B7EB;
+.channel-tab-friends-title .chat-user-control-clan .text,
+.channel-tab-friends-title .chat-user-control-username .text {
+  -fx-fill: #16B7EB;
 }
 
-.channel-tab-foes-title .chat-user-control-clan,
-.channel-tab-foes-title .chat-user-control-username {
-  -fx-text-fill: #FF0000;
+.channel-tab-foes-title .chat-user-control-clan .text,
+.channel-tab-foes-title .chat-user-control-username .text {
+  -fx-fill: #FF0000;
 }
 
-.channel-tab-moderators-title .chat-user-control-clan,
-.channel-tab-moderators-title .chat-user-control-username {
-  -fx-text-fill: #FFFFFF;
+.channel-tab-moderators-title .chat-user-control-clan .text,
+.channel-tab-moderators-title .chat-user-control-username .text {
+  -fx-fill: #FFFFFF;
 }
 
-.channel-tab-chat-only-title .chat-user-control-clan,
-.channel-tab-chat-only-title .chat-user-control-username {
-  -fx-text-fill: #808080;
+.channel-tab-chat-only-title .chat-user-control-clan .text,
+.channel-tab-chat-only-title .chat-user-control-username .text {
+  -fx-fill: #808080;
 }
 
-.channel-tab-others-title .chat-user-control-clan,
-.channel-tab-others-title .chat-user-control-username {
-  -fx-text-fill: #BFBEBA;
+.channel-tab-others-title .chat-user-control-clan .text,
+.channel-tab-others-title .chat-user-control-username .text {
+  -fx-fill: #BFBEBA;
 }
 
 .chat-user-control-clan.self,
 .chat-user-control-username.self {
-  -fx-text-fill: #FFA500;
+  -fx-fill: #FFA500;
 }
 
 /***************** Played Card Tooltip*****************/
