--- a/src/main/resources/theme/map_upload.fxml
+++ b/src/main/resources/theme/map_upload.fxml
@@ -3,36 +3,34 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Text?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="mapUploadRoot" styleClass="dialog-window"
-      xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.faforever.client.map.UploadMapController">
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="mapUploadRoot" minHeight="100.0" minWidth="100.0"
+      styleClass="dialog-window" xmlns="http://javafx.com/javafx/8.0.60"
+      fx:controller="com.faforever.client.map.MapUploadController">
   <children>
-    <VBox fx:id="mapInfoPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="500.0" minWidth="100.0"
-          prefWidth="380.0" spacing="20.0" VBox.vgrow="ALWAYS">
+    <VBox fx:id="mapInfoPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="500.0"
+          spacing="20.0" VBox.vgrow="ALWAYS">
       <children>
         <Label styleClass="h1" text="%mapVault.upload.title"/>
-        <HBox styleClass="hint">
-          <children>
-            <Label contentDisplay="RIGHT" styleClass="fontawesome" text="">
-              <graphic>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="%mapVault.upload.hint"/>
-              </graphic>
+        <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="hint"
+               text="%mapVault.upload.hint" wrapText="true">
+          <graphic>
+            <Label contentDisplay="RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                   styleClass="fontawesome" text="" wrapText="true"/>
+          </graphic>
             </Label>
-          </children>
-        </HBox>
         <Label fx:id="mapNameLabel" alignment="CENTER" contentDisplay="TOP" maxWidth="1.7976931348623157E308"
                styleClass="h1" text="&lt;Name&gt;" wrapText="true" VBox.vgrow="ALWAYS">
           <graphic>
-            <ImageView fx:id="thumbnailImageView" fitHeight="128.0" fitWidth="128.0" pickOnBounds="true"
+            <ImageView fx:id="thumbnailImageView" fitHeight="256.0" fitWidth="256.0" pickOnBounds="true"
                        preserveRatio="true"/>
           </graphic>
         </Label>
@@ -46,18 +44,29 @@
           <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
           </rowConstraints>
           <children>
             <Label text="%mapVault.upload.mapVersion"/>
             <Label fx:id="versionLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308"
                    text="&lt;Version&gt;" GridPane.columnIndex="1"/>
-            <Label fx:id="uidLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="&lt;UID&gt;"
+            <Label text="%mapVault.upload.mapSize" GridPane.rowIndex="1"/>
+            <Label fx:id="sizeLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="&lt;Size&gt;"
                    GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+            <Label text="%mapVault.upload.players" GridPane.rowIndex="2"/>
+            <Label fx:id="playersLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308"
+                   text="&lt;Max Players&gt;" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
           </children>
           <VBox.margin>
             <Insets top="10.0"/>
           </VBox.margin>
         </GridPane>
+        <Label fx:id="rankedLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+               text="%mapVault.upload.rankedConfirm" wrapText="true">
+          <graphic>
+            <CheckBox fx:id="rankedCheckbox" mnemonicParsing="false" selected="true"/>
+          </graphic>
+        </Label>
         <ButtonBar prefHeight="40.0" prefWidth="200.0">
           <buttons>
             <Button defaultButton="true" mnemonicParsing="false" onAction="#onUploadClicked"
