--- a/src/main/resources/theme/settings.fxml
+++ b/src/main/resources/theme/settings.fxml
@@ -1,23 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.Group?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="settingsRoot" maxHeight="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.faforever.client.preferences.SettingsController">
+<?import javafx.scene.layout.*?>
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="settingsRoot" maxHeight="1.7976931348623157E308"
+      xmlns="http://javafx.com/javafx/8.0.60" fx:controller="com.faforever.client.preferences.SettingsController">
   <children>
     <HBox styleClass="settings-head">
       <children>
@@ -207,11 +194,32 @@
                         <Label text="%settings.fa.gameLocation" />
                         <HBox spacing="10.0">
                           <children>
-                            <TextField fx:id="gameLocationTextField" HBox.hgrow="ALWAYS" />
-                            <Button fx:id="gameLocationButton" mnemonicParsing="false" text="Button" />
+                            <TextField fx:id="gameLocationTextField" promptText="%settings.fa.useDefault"
+                                       HBox.hgrow="ALWAYS"/>
+                            <Button fx:id="gameLocationButton" mnemonicParsing="false"
+                                    text="%settings.fa.chooseDirectory"/>
                           </children>
                         </HBox>
                         <CheckBox fx:id="autoDownloadMapsCheckBox" mnemonicParsing="false" text="%settings.fa.autoDownloadMaps" />
+                      </children>
+                    </VBox>
+                  </content>
+                </TitledPane>
+                <TitledPane animated="false" collapsible="false" prefHeight="200.0" prefWidth="200.0"
+                            text="%settings.fa.advanced">
+                  <content>
+                    <VBox spacing="10.0">
+                      <children>
+                        <Label text="%settings.fa.executableDecorator" wrapText="true"/>
+                        <TextField fx:id="executableDecoratorField" promptText="&quot;%s&quot;"/>
+                        <Label text="%settings.fa.executionDirectory" wrapText="true"/>
+                        <HBox maxWidth="1.7976931348623157E308" spacing="10.0">
+                          <children>
+                            <TextField fx:id="executionDirectoryField" promptText="%settings.fa.useDefault"
+                                       HBox.hgrow="ALWAYS"/>
+                            <Button mnemonicParsing="false" text="%settings.fa.chooseDirectory"/>
+                          </children>
+                        </HBox>
                       </children>
                     </VBox>
                   </content>
