--- a/src/main/resources/theme/map_tile.fxml
+++ b/src/main/resources/theme/map_tile.fxml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.*?>
 <GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="mapTileRoot" onMouseClicked="#onShowMapDetail" prefWidth="200.0"
           styleClass="tile,pointable" xmlns="http://javafx.com/javafx/8.0.60"
           fx:controller="com.faforever.client.map.MapTileController">
@@ -33,7 +31,7 @@
         <Label styleClass="fontawesome" text=""/>
       </graphic>
     </Label>
-    <Label text="%mapVault." GridPane.rowIndex="4"/>
+    <Label text="%map.updated" GridPane.rowIndex="4"/>
     <Label fx:id="updatedDateLabel" text="&lt;Updated&gt;" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
   </children>
 </GridPane>
