#225 Implement channel topic listening

--- a/src/main/resources/theme/style-webview.css
+++ b/src/main/resources/theme/style-webview.css
@@ -27,12 +27,14 @@ a {
   flex-direction: column;
 }
 
-#channelTopic {
+#channel-topic {
   color: white;
   background: #333;
 }
 
 #content {
+  flex: 1;
+  display: flex;
   overflow: auto;
 }
 
