--- a/src/main/resources/theme/style-webview.css
+++ b/src/main/resources/theme/style-webview.css
@@ -6,7 +6,7 @@ All the following applies to the content of a WebViews (chat, news), therefore i
 
 html, body {
   background-color: transparent;
-  margin: 0, 0, 0, 5px;
+  margin: 0;
   padding: 0;
   /* Use same as -fx-light-text-color */
   color: #BFBEBA;
@@ -28,6 +28,13 @@ a {
 }
 
 #channel-topic {
+  position: fixed;
+}
+
+#channel-topic, #channel-topic-shadow {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 5px;
   color: white;
   background: #333;
 }
@@ -36,6 +43,11 @@ a {
   flex: 1;
   display: flex;
   overflow: auto;
+  padding: 0px 5px;
+}
+
+#chat-table {
+  margin-top: 5px;
 }
 
 /***************** Search (WebView) *****************/
