--- a/src/main/resources/theme/map_vault.fxml
+++ b/src/main/resources/theme/map_vault.fxml
@@ -41,7 +41,7 @@
                               <Insets bottom="20.0" top="20.0"/>
                            </VBox.margin>
                         </HBox>
-                        <Button disable="true" mnemonicParsing="false" onAction="#onUploadMapButtonClicked"
+                        <Button mnemonicParsing="false" onAction="#onUploadMapButtonClicked"
                                 text="%mapVault.upload"/>
                         <VBox fx:id="showroomGroup" spacing="5.0">
                            <children>
