--- a/src/main/resources/theme/map_vault.fxml
+++ b/src/main/resources/theme/map_vault.fxml
@@ -1,15 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ProgressIndicator?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <StackPane xmlns:fx="http://javafx.com/fxml/1" fx:id="mapVaultRoot" xmlns="http://javafx.com/javafx/8.0.60"
            fx:controller="com.faforever.client.map.MapVaultController">
    <children>
@@ -41,7 +34,7 @@
                               <Insets bottom="20.0" top="20.0"/>
                            </VBox.margin>
                         </HBox>
-                        <Button disable="true" mnemonicParsing="false" onAction="#onUploadMapButtonClicked"
+                        <Button mnemonicParsing="false" onAction="#onUploadMapButtonClicked"
                                 text="%mapVault.upload"/>
                         <VBox fx:id="showroomGroup" spacing="5.0">
                            <children>
